index-scheduler/src/snapshots/lib.rs/test_auto_deletion_of_tasks/task_deletion_have_been_enqueued.snap
---
source: index-scheduler/src/lib.rs
---
[
  {
    "uid": 0,
    "enqueuedAt": "[date]",
    "startedAt": "[date]",
    "finishedAt": "[date]",
    "error": null,
    "canceledBy": null,
    "details": {
      "IndexInfo": {
        "primary_key": null
      }
    },
    "status": "succeeded",
    "kind": {
      "indexCreation": {
        "index_uid": "doggo",
        "primary_key": null
      }
    }
  },
  {
    "uid": 1,
    "enqueuedAt": "[date]",
    "startedAt": "[date]",
    "finishedAt": "[date]",
    "error": {
      "message": "Index `doggo` already exists.",
      "code": "index_already_exists",
      "type": "invalid_request",
      "link": "https://docs.meilisearch.com/errors#index_already_exists"
    },
    "canceledBy": null,
    "details": {
      "IndexInfo": {
        "primary_key": null
      }
    },
    "status": "failed",
    "kind": {
      "indexCreation": {
        "index_uid": "doggo",
        "primary_key": null
      }
    }
  },
  {
    "uid": 2,
    "enqueuedAt": "[date]",
    "startedAt": "[date]",
    "finishedAt": "[date]",
    "error": null,
    "canceledBy": null,
    "details": {
      "IndexInfo": {
        "primary_key": null
      }
    },
    "status": "enqueued",
    "kind": {
      "indexCreation": {
        "index_uid": "doggo",
        "primary_key": null
      }
    }
  },
  {
    "uid": 3,
    "enqueuedAt": "[date]",
    "startedAt": "[date]",
    "finishedAt": "[date]",
    "error": null,
    "canceledBy": null,
    "details": {
      "IndexInfo": {
        "primary_key": null
      }
    },
    "status": "enqueued",
    "kind": {
      "indexCreation": {
        "index_uid": "doggo",
        "primary_key": null
      }
    }
  },
  {
    "uid": 4,
    "enqueuedAt": "[date]",
    "startedAt": "[date]",
    "finishedAt": "[date]",
    "error": null,
    "canceledBy": null,
    "details": {
      "TaskDeletion": {
        "matched_tasks": 2,
        "deleted_tasks": null,
        "original_filter": "[filter]"
      }
    },
    "status": "enqueued",
    "kind": {
      "taskDeletion": {
        "query": "[query]",
        "tasks": [
          1,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          0,
          58,
          48,
          0,
          0,
          1,
          0,
          0,
          0,
          0,
          0,
          1,
          0,
          16,
          0,
          0,
          0,
          0,
          0,
          1,
          0
        ]
      }
    }
  }
]
