index-scheduler/src/snapshots/lib.rs/test_auto_deletion_of_tasks/task_queue_is_full.snap
---
source: index-scheduler/src/lib.rs
---
[
  {
    "uid": 0,
    "enqueuedAt": "[date]",
    "startedAt": "[date]",
    "finishedAt": "[date]",
    "error": null,
    "canceledBy": null,
    "details": {
      "IndexInfo": {
        "primary_key": null
      }
    },
    "status": "succeeded",
    "kind": {
      "indexCreation": {
        "index_uid": "doggo",
        "primary_key": null
      }
    }
  },
  {
    "uid": 1,
    "enqueuedAt": "[date]",
    "startedAt": "[date]",
    "finishedAt": "[date]",
    "error": {
      "message": "Index `doggo` already exists.",
      "code": "index_already_exists",
      "type": "invalid_request",
      "link": "https://docs.meilisearch.com/errors#index_already_exists"
    },
    "canceledBy": null,
    "details": {
      "IndexInfo": {
        "primary_key": null
      }
    },
    "status": "failed",
    "kind": {
      "indexCreation": {
        "index_uid": "doggo",
        "primary_key": null
      }
    }
  },
  {
    "uid": 2,
    "enqueuedAt": "[date]",
    "startedAt": "[date]",
    "finishedAt": "[date]",
    "error": null,
    "canceledBy": null,
    "details": {
      "IndexInfo": {
        "primary_key": null
      }
    },
    "status": "enqueued",
    "kind": {
      "indexCreation": {
        "index_uid": "doggo",
        "primary_key": null
      }
    }
  },
  {
    "uid": 3,
    "enqueuedAt": "[date]",
    "startedAt": "[date]",
    "finishedAt": "[date]",
    "error": null,
    "canceledBy": null,
    "details": {
      "IndexInfo": {
        "primary_key": null
      }
    },
    "status": "enqueued",
    "kind": {
      "indexCreation": {
        "index_uid": "doggo",
        "primary_key": null
      }
    }
  }
]
